<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".DetailActivity"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="150dp"
    android:layout_width="409dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp">

    <TextView
        android:id="@+id/textViewTBS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titleBattleship"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewCBSP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titleCBSP"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewTHT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titleHauntedTour"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titleFortFischer"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="324dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/textViewBSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BattleshipInfo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewCBSPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CBSPInfo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewHTI"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/HauntedTourInfo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="544dp" />

        <TextView
            android:id="@+id/textviewFFI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FortFischerInfo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="544dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>