<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />


    <LinearLayout android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/titleBattleship"
        android:id="@+id/textViewBattleship"
        android:visibility="gone"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/titleCBSP"
        android:id="@+id/textViewBeach"
        android:visibility="gone"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/titleHauntedTour"
        android:id="@+id/textViewTour"
        android:visibility="gone"/>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/titleFortFischer"
        android:id="@+id/textViewFort"
        android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>